--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,7 +73,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light border">
+        <nav class="navbar navbar-expand-md navbar-light border" style="font-family: Lato; font-weight:600;">
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -81,70 +81,13 @@
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/explore">Explore</a></li>
-                        <!--<li class="nav-item dropdown">-->
-                        <!--    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-                        <!--      Explore-->
-                        <!--    </a>-->
-                        <!--    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-                        <!--      <a class="dropdown-item" href="/explore" style="color: #017bff">Topics</a>-->
-                        <!--      <a class="dropdown-item" href="/method/0" style="color: #017bff">Methods</a>-->
-                        <!--      <a class="dropdown-item" href="/browse/0" style="color: #017bff">See all</a>-->
-                        <!--    </div>-->
-                        <!-- </li>-->
                         <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Contribute
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="/tasks" style="color: #017bff">Tasks</a>
-                              <a class="dropdown-item" href="/suggestions/0" style="color: #017bff">QuickTasks</a>
-                            </div>
-                         </li>
-                        <!--<li class="nav-item dropdown">-->
-                        <!--    <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-                        <!--      Help-->
-                        <!--    </a>-->
-                        <!--    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-                        <!--      <a class="dropdown-item" href="/about" style="color: #017bff">About</a>-->
-                        <!--      <a class="dropdown-item" href="/contact" style="color: #017bff">Contact Us</a>-->
-                        <!--    </div>-->
-                        <!-- </li>-->
+                        <li class="nav-item"><a class="nav-link" href="/tasks">Contribute</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                         <!--<li class="nav-item px-4 dropdown">-->
-                         <!--  <div class="row">-->
-                         <!--     <a class="navbar-brand" href="/"><font color="#017bff">dcyphr</font></a>-->
-                         <!--  </div>-->
-
-                         <!-- <div class="dropdown-menu dropdown-menu-left" aria-labelledby="servicesDropdown">-->
-                         <!--  <a class="dropdown-item" href="#">What is dcyphr?</a>-->
-                         <!--  <a class="dropdown-item" href="#">How does dcyphr fit your workflow?</a>-->
-                         <!--  <div class="dropdown-divider"></div>-->
-                         <!--  <div class="d-md-flex align-items-start justify-content-start">-->
-                         <!--   <div>-->
-                         <!--    <div class="dropdown-header" style="color: #017bff">EXPLORE</div>-->
-                         <!--    <a class="dropdown-item" href="#">dcyphr articles</a>-->
-                         <!--    <a class="dropdown-item" href="#">lab methods</a>-->
-                         <!--    <a class="dropdown-item" href="#">request an article</a>-->
-                         <!--   </div>-->
-                         <!--   <div>-->
-                         <!--    <div class="dropdown-header" style="color: #017bff">CONTRIBUTE</div>-->
-                         <!--    <a class="dropdown-item" href="#">tasks</a>-->
-                         <!--    <a class="dropdown-item" href="#">quickTasks</a>-->
-                         <!--   </div>-->
-                         <!--   <div>-->
-                         <!--    <div class="dropdown-header" style="color: #017bff">HELP</div>-->
-                         <!--    <a class="dropdown-item" href="#">mission</a>-->
-                         <!--    <a class="dropdown-item" href="#">contact</a>-->
-                         <!--   </div>-->
-                         <!--  </div>-->
-                         <!-- </div>-->
-                         <!--</li>-->
-
-
+                      
                         <form action="/" method="POST">
                         <div class="nav-item ml-3 mb-1 input-group">
-                            <input class="form-control border border-dark border20" type="text" name="search" placeholder="Search">
+                            <input class="form-control form-control-underlined text-black dark" type="text" name="search" placeholder="Search">
                         </div>
                         </form>
 
