various UI changes

--- a/static/styles.css
+++ b/static/styles.css
@@ -229,7 +229,9 @@ dl:nth-of-type(odd) {
     background: linear-gradient(to bottom, #ffffff, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
 
 /*}*/
-
+#mce-EMAIL::placeholder{
+    color: white;
+}
 .disabledButton:hover {
     text-decoration: none;
     filter: brightness(85%);
