--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <img style="margin-top: 20vh" src="{{ url_for('static', filename='dna.svg') }}" alt="Loading...">
     </div>
 </div>
-<nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(19,19,19) !important; font-family: Lato; font-weight:600;">
+<nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(19,19,19) !important; font-family: Lato; font-weight:400;">
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -80,15 +80,15 @@
         <div class="col-6">
             <div class="text-center" style="font-family: Lato;">
                 
-                <p class="pt-5 text-white" style="font-weight: 400; font-size: 5vh">
+                <p class="pt-5 text-white" style="font-weight: 300; font-size: 5vh">
                     Spend less time reading.<br>
                     Spend more time discovering.
                 </p>
                 
-                <a href="/read/{{ random_article }}" class="btn btn-lg bg-0 text-primary">
+                <a href="/read/{{ random_article }}" class="btn btn-lg bg-0 text-primary" style="font-weight: 300;">
                     I'm Feeling Lucky &rsaquo;
                 </a>
-                <a href="/register" class="btn btn-lg bg-0 text-primary">
+                <a href="/register" class="btn btn-lg bg-0 text-primary" style="font-weight: 300;">
                     Get Started &rsaquo;
                 </a>
             </div>
@@ -105,34 +105,31 @@
 
 
     <div class="home_page row" id="section2" >
-        
-         <div class="col-lg-6 col-lg-5 col-lg">
+        <div class="col"></div>
+         <div class="col-6">
             <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
                 <div class="mb-2" style="font-size: 3.0em">
-                    DECENTRALIZING SCIENCE
+                    Maximize productivity
                 </div>
                 <p>
-                    Putting scientific results at your fingertips.
-                    <br>
-                    Helping researchers and students save time
-                    <br>
-                    in keeping up with literature and learning new topics.
+                    Researchers like yourself spend at least 11 hours reading articles each week. <span style="color: #017bff">dcyphr</span> uses psycholinguistics and cutting-edge AI to save you time and resources.
                 </p>
-
-                <br>
-                <a href="/about" class="btn bg-white btn-lg btn-primary" style="color: #017bff">
-                    Learn more &nbsp &#8594;
-                </a>
+                <ul class="list-group">
+                    <li class="list-group-item border-0"><span class="fa fa-rocket" style="color: #017bff"></span> &nbsp; Up to 83% time reduction</li>
+                    <li class="list-group-item border-0"><span class="fa fa-life-buoy" style="color: #017bff"></span> &nbsp; Efficiently keep up with new research</li>
+                    <li class="list-group-item border-0"><span class="fa fa-smile-o" style="color: #017bff"></span> &nbsp; Top-notch research community</li>
+                </ul>
 
             </div>
 
         </div>
-        <div class="col m-0 p-0">
-            <picture id="pic">
+        <div class="col-5 my-auto pt-0">
+            <picture id="pic" class="my-auto">
                 <source type="image/webp" srcset="{{ url_for('static', filename='research.webp') }}">
                 <img src="{{ url_for('static', filename='research.png') }}" alt="">
             </picture>
         </div>
+        <div class="col"></div>
         <div class="row pb-4 pt-0 mt-0 mx-auto">
             <div class="col"></div>
             <div class="col my-auto">
@@ -159,23 +156,49 @@
         </div>
     </div>
     
-
+    <div class="home_page row d-block" style="position: relative;">
+        <div class="text-center d-block mx-auto pt-5">
+            <div style="font-family: Lato; font-size: 3.0em; font-weight:300;" class="pt-5 pb-3">dcyphr is for people</div>
+            <div style="font-family: Lato; font-weight: 300; font-size: 1.3em;" class="col-lg-5 mx-auto">
+                <p><a href="https://staff.aub.edu.lb/~lmeho/meho-physics-world.pdf" target="_blank">50%</a> of published research goes unread.
+                <a href="https://thejournal.com/articles/2016/11/17/many-high-school-graduates-want-to-pursue-stem-careers-but-are-unprepared-for-stem-college-courses.aspx">74%</a> of college first-years are not prepared to enter research fields.
+                <a href="https://www.pnas.org/content/116/16/7662">84%</a> of Americans think there is a problem with scientific communication.</p>
+            </div>
+        </div>
+        <div class="row pt-5 mt-5" style="font-family: Lato;">
+            <div class="col"></div>
+            <div class="col text-left">
+                <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-institution"></i> &nbsp; For researchers &nbsp;</p>
+                <p>We make browsing literature easy and enjoiyable. Contribute distillations to make your research more accessible and impactful.</p>
+            </div>
+            <div class="col text-left">
+                <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-graduation-cap"></i> &nbsp; For students</p>
+                <p>We help students break into research fields by allowing them to quickly grasp concepts instead of being weighed down by jargon.</p>
+            </div>
+            <div class="col text-left">
+                <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-users"></i> &nbsp; For everyone</p>
+                <p>We make research accessible and fun to read for everyone. We believe the public has the right to understand new discoveries.</p>
+            </div>
+            <div class="col"></div>
+        </div>
+        <div class="custom-shape-divider-bottom-1595011423">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
+            </svg>
+        </div>
+    </div>
     <div class="home_page row" id="section3" style="position: relative;">
          <div class="col-lg-7 col-12">
             <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
                 <div class="mb-2" style="font-size: 3.0em">
-                    SHARE KNOWLEDGE
+                    Become a research distiller
                 </div>
                 <p>
-                    Join the movement and help make science more accessible.
-                    <br>
-                    Upload distillations to expand your scientific impact.
-                    <br>
-                    Work with AI to quickly dcyphr articles.
+                    We're looking for driven and research-oriented individuals to join our team. <a href="/register" style="color:#017bff">Sign up as a freelance contributor</a> or <a href="mailto:team@dcyphr.org" style="color:#017bff">become a dcyphr research fellow</a>.
                 </p>
                 <br>
-                <a href="/register" class="btn bg-0 btn-lg border border-white">
-                    Get started &nbsp &#8594;
+                <a href="https://bit.ly/30Co0P9" target="_blank" class="btn bg-0 btn-lg btn-outline-primary">
+                    Join our Slack &nbsp &#8594;
                 </a>
             </div>
         </div>
@@ -186,7 +209,7 @@
 
             </div>
 
-            <div class="p-3 mx-5 border border-white bg-white" style="min-height: 50%; border-radius:20px; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71); position: relative">
+            <div class="p-3 mx-5 border border-white bg-white" style="min-height: 50%; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71); position: relative">
                 <div class="text-left text-muted" style="font-size:30px; margin-left:20px; font-family: Georgia">Leaderboard</div>
 
                 <div class="row m-3 ">
@@ -229,43 +252,30 @@
                 </div>
             </div>
         </div>
-        <div class="custom-shape-divider-bottom-1595011423">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
-            </svg>
+        <div class="row mx-auto py-5 mb-5 w-50" style="background: rgb(94,113,228); box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71);">
+            <!-- Begin Mailchimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+                #mc_embed_signup{background:rgb(94,113,228); clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup">
+            <form action="https://dcyphr.us8.list-manage.com/subscribe/post?u=1c38534c3ddafced299e23a1c&amp;id=52012213fb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                <p style="font-family: Lato; font-size:3vh; color:white;" class="py-4">Get bite-sized science in your inbox each week!</p>
+                <input type="email" value="" name="EMAIL" class="border20 form-control w-50" style="background-color: rgb(94,113,228)" id="mce-EMAIL" placeholder="isaac.newton@earth.org" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1c38534c3ddafced299e23a1c_52012213fb" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-light border20"></div>
+                </div>
+            </form>
+            </div>
         </div>
+        
     </div>
 
-    <div class="home_page row" id="section4">
-        <div class="col-lg-6 col-lg-5 col-lg">
-            <div class="index_info text-left pr-0" style="font-family: Lato; font-weight: 300">
-                <div class="mb-2" style="font-size: 3.0em">
-                    REQUEST INSIGHTS
-                </div>
-                <p>
-                    Streamline your workflow with articles you can trust.
-                    <br>
-                    Turbocharge your research by requesting results immediately.
-                    <br>
-                    Get personalized distillations today.
-                </p>
-                <br>
-                <a href="/request" class="btn btn-lg bg-white btn-primary" style="color: #017bff">
-                    Request &nbsp &#8594;
-                </a>
-            </div>
-        </div>
-        <div class="col m-0 pr-5">
-            <div class="h-20">
-            </div>
-            <picture class="h-60 w-100" style="margin-top: 10vh;" id="pic">
-                <source type="image/webp" srcset="{{ url_for('static', filename='network.webp') }}">
-                <img class="h-60 w-100" style="margin-top: 10vh;"src="{{ url_for('static', filename='network.png') }}" alt="">
-            </picture>
-            <div class="h-20">
-            </div>
-        </div>
-    </div>
+    
 
 </div>
 {% endblock %}
