--- a/templates/index.html
+++ b/templates/index.html
@@ -77,10 +77,10 @@
 <div class="main">
     <div class="row" style="background-color: rgb(19,19,19); min-height: 60vh; position: relative;">
         <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-lg-6">
             <div class="text-center" style="font-family: Lato;">
                 
-                <p class="pt-5 text-white" style="font-weight: 300; font-size: 5vh">
+                <p class="pt-5 text-white" style="font-weight: 300; font-size: 5vh" id="landing">
                     Spend less time reading.<br>
                     Spend more time discovering.
                 </p>
@@ -105,8 +105,8 @@
 
 
     <div class="home_page row" id="section2" >
-        <div class="col"></div>
-         <div class="col-6">
+        <div class="col-md"></div>
+         <div class="col-md-6">
             <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
                 <div class="mb-2" style="font-size: 3.0em">
                     Maximize productivity
@@ -123,13 +123,13 @@
             </div>
 
         </div>
-        <div class="col-5 my-auto pt-0">
+        <div class="col-md-5 my-auto pt-0">
             <picture id="pic" class="my-auto">
                 <source type="image/webp" srcset="{{ url_for('static', filename='research.webp') }}">
                 <img src="{{ url_for('static', filename='research.png') }}" alt="">
             </picture>
         </div>
-        <div class="col"></div>
+        <div class="col-md"></div>
         <div class="row pb-4 pt-0 mt-0 mx-auto">
             <div class="col"></div>
             <div class="col my-auto">
@@ -156,9 +156,9 @@
         </div>
     </div>
     
-    <div class="home_page row d-block" style="position: relative;">
+    <div class="home_page row d-block landing_row" style="position: relative;">
         <div class="text-center d-block mx-auto pt-5">
-            <div style="font-family: Lato; font-size: 3.0em; font-weight:300;" class="pt-5 pb-3">dcyphr is for people</div>
+            <div style="font-family: Lato; font-size: 3.0em; font-weight:300;" class="pt-5 pb-3" id="for_people">dcyphr is for people</div>
             <div style="font-family: Lato; font-weight: 300; font-size: 1.3em;" class="col-lg-5 mx-auto">
                 <p><a href="https://staff.aub.edu.lb/~lmeho/meho-physics-world.pdf" target="_blank">50%</a> of published research goes unread.
                 <a href="https://thejournal.com/articles/2016/11/17/many-high-school-graduates-want-to-pursue-stem-careers-but-are-unprepared-for-stem-college-courses.aspx">74%</a> of college first-years are not prepared to enter research fields.
@@ -166,20 +166,20 @@
             </div>
         </div>
         <div class="row pt-5 mt-5" style="font-family: Lato;">
-            <div class="col"></div>
-            <div class="col text-left">
+            <div class="col-sm"></div>
+            <div class="col-sm text-left">
                 <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-institution"></i> &nbsp; For researchers &nbsp;</p>
                 <p>We make browsing literature easy and enjoiyable. Contribute distillations to make your research more accessible and impactful.</p>
             </div>
-            <div class="col text-left">
+            <div class="col-sm text-left">
                 <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-graduation-cap"></i> &nbsp; For students</p>
                 <p>We help students break into research fields by allowing them to quickly grasp concepts instead of being weighed down by jargon.</p>
             </div>
-            <div class="col text-left">
+            <div class="col-sm text-left">
                 <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-users"></i> &nbsp; For everyone</p>
                 <p>We make research accessible and fun to read for everyone. We believe the public has the right to understand new discoveries.</p>
             </div>
-            <div class="col"></div>
+            <div class="col-sm"></div>
         </div>
         <div class="custom-shape-divider-bottom-1595011423">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -209,7 +209,7 @@
 
             </div>
 
-            <div class="p-3 mx-5 border border-white bg-white" style="min-height: 50%; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71); position: relative">
+            <div class="p-3 mx-5 border border-white bg-white landing_box" style="min-height: 60%; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71); position: relative">
                 <div class="text-left text-muted" style="font-size:30px; margin-left:20px; font-family: Georgia">Leaderboard</div>
 
                 <div class="row m-3 ">
@@ -252,7 +252,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mx-auto py-5 mb-5 w-50" style="background: rgb(94,113,228); box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71);">
+        <div class="row mx-auto py-5 mb-5 w-50 landing_box" style="background: rgb(94,113,228); box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71);">
             <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
             <style type="text/css">
