--- a/templates/index.html
+++ b/templates/index.html
@@ -128,30 +128,32 @@
                 <img src="{{ url_for('static', filename='research.png') }}" alt="">
             </picture>
         </div>
-        <div class="col-md"></div>
-        <div class="row pb-4 pt-0 mt-0 mx-auto">
-            <div class="col"></div>
-            <div class="col my-auto">
-                <picture >
-                    <source type="image/webp" srcset="{{ url_for('static', filename='tsai.webp') }}"> 
-                    <img src="{{ url_for('static', filename='tsai.png') }}" alt="">
-               </picture>
-            </div>
-            <div class="col"></div>
-            <div class="col my-auto">
-                <picture>
-                    <source type="image/webp" srcset="{{ url_for('static', filename='ow.webp') }}">
-                    <img src="{{ url_for('static', filename='ow.png') }}" alt="">
-               </picture>
-            </div>
-            <div class="col"></div>
-            <div class="col my-auto">
-                <picture>
-                    <source type="image/webp" srcset="{{ url_for('static', filename='cvt.webp') }}">
-                    <img src="{{ url_for('static', filename='cvt.png') }}" alt="">
-               </picture>
-            </div>
-            <div class="col"></div>
+        <div class="row mt-0">
+            <div class="col-md"></div>
+            <div class="row pb-4 pt-0 mt-0 mx-auto">
+                <div class="col"></div>
+                <div class="col my-auto">
+                    <picture >
+                        <source type="image/webp" srcset="{{ url_for('static', filename='tsai.webp') }}"> 
+                        <img src="{{ url_for('static', filename='tsai.png') }}" alt="">
+                </picture>
+                </div>
+                <div class="col"></div>
+                <div class="col my-auto">
+                    <picture>
+                        <source type="image/webp" srcset="{{ url_for('static', filename='ow.webp') }}">
+                        <img src="{{ url_for('static', filename='ow.png') }}" alt="">
+                </picture>
+                </div>
+                <div class="col"></div>
+                <div class="col my-auto">
+                    <picture>
+                        <source type="image/webp" srcset="{{ url_for('static', filename='cvt.webp') }}">
+                        <img src="{{ url_for('static', filename='cvt.png') }}" alt="">
+                </picture>
+                </div>
+                <div class="col"></div>
+        </div>
         </div>
     </div>
     
@@ -160,15 +162,15 @@
             <div style="font-family: Lato; font-size: 3.0em; font-weight:300;" class="pt-5 pb-3" id="for_people">dcyphr is for people</div>
             <div style="font-family: Lato; font-weight: 300; font-size: 1.3em;" class="col-lg-5 mx-auto">
                 <p><a href="https://staff.aub.edu.lb/~lmeho/meho-physics-world.pdf" target="_blank">50%</a> of published research goes unread.
-                <a href="https://thejournal.com/articles/2016/11/17/many-high-school-graduates-want-to-pursue-stem-careers-but-are-unprepared-for-stem-college-courses.aspx">74%</a> of college first-years are not prepared to enter research fields.
-                <a href="https://www.pnas.org/content/116/16/7662">84%</a> of Americans think there is a problem with scientific communication.</p>
+                <a href="https://thejournal.com/articles/2016/11/17/many-high-school-graduates-want-to-pursue-stem-careers-but-are-unprepared-for-stem-college-courses.aspx" target="_blank">74%</a> of high school graduates are not prepared to take undergraduate STEM classes.
+                <a href="https://www.pnas.org/content/116/16/7662" target="_blank">84%</a> of Americans think there is a problem with scientific communication.</p>
             </div>
         </div>
         <div class="row pt-5 mt-5" style="font-family: Lato;">
             <div class="col-sm"></div>
             <div class="col-sm text-left">
                 <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-institution"></i> &nbsp; For researchers &nbsp;</p>
-                <p>We make browsing literature easy and enjoiyable. Contribute distillations to make your research more accessible and impactful.</p>
+                <p>We make browsing literature easy and enjoyable. Contribute distillations to make your research more accessible and impactful.</p>
             </div>
             <div class="col-sm text-left">
                 <p style="font-weight:700; font-size: 3vh"><i class="fa fa-lg fa-graduation-cap"></i> &nbsp; For students</p>
