--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="row" style="min-height: 75%">
-            <div class="my-5 mx-auto p-4 col-xl-10 col-12 border border-dark border20 text-left alternate">
+            <div class="my-5 mx-auto p-4 col-xl-10 col-12 border border-dark border20 text-left alternate" style="max-height: 50vh; overflow-y: scroll;">
                 <h4 class="mt-0 border-bottom" style="font-family:Georgia"><strong>Contributions</strong></h4>
                 {% for i in range(length) %}
                 <div class="w-100 py-1 border-bottom pl-2">
