--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 </div>
 <nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(19,19,19) !important; font-family: Lato; font-weight:400;">
     <a class="navbar-brand" href="/" ><img src="{{ url_for('static', filename='dcyphr_logo.png') }}" alt="" width="60" height="58"></a>
-            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
+            <button aria-controls="navbarIndex" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarIndex" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbar">
+            <div class="collapse navbar-collapse" id="navbarIndex">
                     <ul class="navbar-nav mr-auto mt-2">
                         
                         <li class="nav-item"><a class="nav-link text-white" href="/explore">Explore</a></li>
