--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -9,6 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" defer></script>
+
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" defer>
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' defer>
 
@@ -17,15 +20,12 @@
         <link href="/static/styles.css" rel="stylesheet" defer>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css" defer>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" defer></script>
+        
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" defer></script>
         <script src="https://www.w3schools.com/lib/w3.js" defer></script>
 
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" defer>
 
-
-        <!-- End of Async Drift Code -->
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162663603-1"></script>
@@ -163,7 +163,6 @@
     <a href="https://www.dcyphr.org" style="color:white" target="_blank"> www.dcyphr.org </a>
   </div>
   <!-- Copyright -->
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us8.list-manage.com","uuid":"1c38534c3ddafced299e23a1c","lid":"52012213fb","uniqueMethods":true}) })</script>
 </footer>
 <!-- Footer -->
 </html>
